[metadata]
name = bench_test_resources
version = 2.2
author = Finn Drabsch
author_email = fdrabsch@enphaseenergy.co.nz
description = A collection of helpful functions/modules for bench testing
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.7
install_requires =

    enphase_ecdc>=5.30.58
    enphase_testlib>=1.0.51
    pathlib
    typing

[options.packages.find]
where=src

# [options.package_data]
# ongui.config =
#     config.json

# [options.entry_points]
# gui_scripts =
#     one_gui = one_gui:app.main